# cotton_weed_kaggle_3lc

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
nbs/: cotton_weed_starter_notebook.ipynb
src/: main.py  opt_tlc_ultralytics.py  predict.py  start_dashboards.sh  train.py  tune_ultralytics.py
