[project]
name = "cotton-weed-kaggle-3lc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.14.1",
]

[tool.uv.sources]
simple_project_setup = {path = "src"}

[tool.ruff]
line-length = 78
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []


[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[build-system]
requires = ["uv-build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
